# pascal-mips-compiler

./: README.md  pascal0-reference.md  run.cabal  trabalho.md
examples/: fact.pas0  fact.pas0.mips  fib.pas0  myprime.pas0  prime.pas0  prime.pas0.mips  sort.pas0  sumsquares.pas0  test.pas0
src/: AST.hs  CodeGen.hs  IR.hs  Interm.hs  Lexer.x  Main.hs  Parser.y  PrettyPrint.hs  TypeCheck.hs
